feat(content): update team members and projects
- Added new team member images (Divyanshu, Lokesh, Ritik, etc)

- Updated team.toml with new members

- Updated Gesto project details in projects.toml

--- a/data/projects.toml
+++ b/data/projects.toml
@@ -71,3 +71,11 @@ icon = "fa-solid fa-hand-sparkles"
 tech_stack = ["TensorFlow.js", "Next.js", "FastAPI"]
 repo_url = "https://devfolio.co/projects/gesto-244d"
 authors = ["PriyavKaneria", "sanskaromar", "shauryaDugar"]
+
+[[projects]]
+title = "Visivox"
+description = "Hands-free multimodal assistive control system. Empowers users with mobility impairments to control computers using gaze, facial gestures, and voice commands."
+icon = "fa-solid fa-eye"
+tech_stack = ["Python", "MediaPipe", "Julep API"]
+repo_url = "https://github.com/pratik4505/VisiVox"
+authors = ["pratik4505", "Utsav-Kasvala", "Vaibhavdev309"]
